tdf#119016 Editing a read-only section shall popup a dialog

While processing the key input, an additional if statement for the
paste command (Ctrl+V) is added.

Change-Id: If205589256855422ac93f8a5ed8a1ee394ca9310
Reviewed-on: https://gerrit.libreoffice.org/58360
Tested-by: Jenkins
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>
(cherry picked from commit 66838c2418df4d016be0da0ef1c7e54934c03421)